--- a/html/contact.html
+++ b/html/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
-    <title>Contact us</title>
+    <title>Mick's Garden - Contact Us</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -17,6 +17,7 @@
         <div class="logo">
             <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
+        <!--Bootstrap Navigation-->
         <div id="nav-container">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <a class="navbar-brand" href="#"></a>
@@ -116,3 +117,4 @@
     <script src="/js/contact.js"></script>
 </body>
 </html>
+<!--Page created by Arisha Mirza-->
