--- a/html/index.html
+++ b/html/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <!-- Fonts from Google Fonts - Slabo 27-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
+    <!--Connecting Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!--Connecting Font Awecome-->
+    <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <title>Mick's Garden</title>
 </head>
 <body>
@@ -20,6 +20,7 @@
         <div class="logo">
             <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
+        <!--Bootstrap Navigation-->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,10 +54,12 @@
           </nav>
     </header>
     <main>
+        <!--Welcome Section-->
         <div class="welcome">
             <h1>Best Produce</h1>
             <h2>from Mick's Garden!</h2>
         </div>
+        <!--Offer List-->
         <div class="offer">
             <div class="offer-card offer1">
                 <h3>Vegetables</h3>
@@ -68,10 +71,12 @@
                 <h3>General</h3>
             </div>
         </div>
+        <!--Reviews Section-->
         <div class="reviews">
             <div class="reviews-wrapper">            
                 <div class="review">
                     <div class="stars">
+                        <!--Stars from Font Awesome-->
                         <i class="fa-solid fa-star fa-2xl"></i>
                         <i class="fa-solid fa-star fa-2xl"></i>
                         <i class="fa-solid fa-star fa-2xl"></i>
@@ -80,6 +85,7 @@
                     </div>
                     <p id="review-text">"Absolutely love this vegetable shop! The produce is always fresh and of high quality. The staff is friendly and knowledgeable. A delightful shopping experience every time!" - Andrew</p>
                 </div>
+                <!--Pick Review Box-->
                 <select name="review" id="review">
                     <option value="andrew">Review by: Andrew</option>
                     <option value="monika">Review by: Monika</option>
@@ -102,6 +108,7 @@
             </ul>
         </div>
 
+        <!--Icons from Font Awesome-->
         <div class="socials">
             <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
             <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
@@ -116,3 +123,4 @@
     <script src="/js/hamburger.js"></script>
 </body>
 </html>
+<!--Page created by Aneta Kotas-->
