--- a/html/newsletter.html
+++ b/html/newsletter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Fruit Shop, Veg Shop, Fruit and Veg, Newsletter">
-    <title>Newsletter Sign Up</title>
+    <title>Mick's Garden - Newsletter Sign Up</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -127,3 +127,4 @@
     <script src="/js/newsletter.js" defer></script>
   </body>
 </html>
+<!--Page created by Ryan Stokes-->
