--- a/html/offer.html
+++ b/html/offer.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
+    <!--Connecting Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <!--Connecting Font Awecome-->
     <script src="https://kit.fontawesome.com/d8fa2073a1.js" crossorigin="anonymous"></script>
     <title>Mick's Garden - Offer</title>
 </head>
@@ -19,6 +20,7 @@
         <div class="logo">
             <a href="index.html"><img src="/images/mick logo.png" alt="logo"></a>
         </div>
+        <!--Bootstrap Navigation-->
         <div id="nav-container">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <a class="navbar-brand" href="#"></a>
@@ -54,12 +56,14 @@
         </div>
     </header>
     <main>
+        <!--Name of Section-->
         <div class="welcome">
             <h1>Our Offer</h1>
         </div>
         <div class="offer-info">
-            <p>Website offer differs from in-store offer. For full and current offer - <a href="directions.html">come visit us!</a></p>
+            <h5>Website offer differs from in-store offer. For full and current offer - <a href="directions.html">come visit us!</a></h5>
         </div>
+        <!--Offer Section-->
         <div class="offer-page">
             <h2>Vegetebles</h2>
             <div class="offer-veg">
@@ -107,6 +111,7 @@
                 </div>
             </div>
         </div>
+        <!--Check if Available-->
         <div class="offer-question">
             <p>Wondering if we have something particular? Type the item to check:</p>
             <input type="text" name="offer-question" id="offer-question">
@@ -127,6 +132,7 @@
             </ul>
         </div>
 
+        <!--Icons from Font Awesome-->
         <div class="socials">
             <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
             <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f fa-xl"></i></a>
@@ -141,3 +147,4 @@
     <script src="/js/hamburger.js"></script>
 </body>
 </html>
+<!--Page created by Aneta Kotas-->
