--- a/html/contact.html
+++ b/html/contact.html
@@ -22,29 +22,32 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="offer.html">Offer</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="quiz.html">Win a Voucher!</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="newsletter.html">Newsletter</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="directions.html">Directions</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                    </li>
-                </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="offer.html">Offer</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="newsletter.html">Newsletter</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="quiz.html">Win a Voucher!</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="directions.html">Directions</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </div>
@@ -112,17 +115,12 @@
         </div>
     </footer>
     <script src="/js/contact.js"></script>
-
     <script>
           function hideform(){
             $("#contact-container").fadeOut(800);
             $("#thank-you").delay(801).fadeIn(800);
-
           };
-        </script>
-
-
-
+    </script>
 </body>
 
 </html>
